--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "devDependencies": {
     "grunt-contrib-concat": "^0.5.0",
+    "grunt-contrib-cssmin": "^0.12.2",
     "grunt-contrib-imagemin": "^0.9.3",
+    "grunt-contrib-uglify": "^0.8.0",
     "matchdep": "^0.3.0"
   },
   "scripts": {
